--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+lib
 
 # Dependency directories
 node_modules/
@@ -64,6 +64,7 @@ typings/
 
 # Output of 'npm pack'
 *.tgz
+package/
 
 # Yarn Integrity file
 .yarn-integrity
